fixed: wrap

--- a/breakpoints/travel-agency/css/page.css
+++ b/breakpoints/travel-agency/css/page.css
@@ -1,3 +1,8 @@
+.container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 @media (max-width: 479px) {
   
   .card {
@@ -33,8 +38,5 @@
     max-width: 1920px;
     margin-left: auto;
     margin-right: auto;
-    
-    display: flex;
-    flex-wrap: wrap;
   }  
 }
